Organized demos, and added optimized lighting demo with halfway vector

--- a/GraphicsProgrammingSolution/00-GlfwWindow/00-GlfwWindow.vcxproj
+++ b/GraphicsProgrammingSolution/00-GlfwWindow/00-GlfwWindow.vcxproj
@@ -151,31 +151,33 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Demos\CartoonShadingDemo.cpp" />
-    <ClCompile Include="Demos\ADSFragDemo.cpp" />
-    <ClCompile Include="Demos\ADSDemo.cpp" />
+    <ClCompile Include="Demos\Light\ADSHalfwayVecDemo.cpp" />
+    <ClCompile Include="Demos\Light\CartoonShadingDemo.cpp" />
+    <ClCompile Include="Demos\Light\ADSFragDemo.cpp" />
+    <ClCompile Include="Demos\Light\ADSDemo.cpp" />
     <ClCompile Include="Cameras\Camera.cpp" />
     <ClCompile Include="Components\Component.cpp" />
-    <ClCompile Include="Demos\DiffuseDemo.cpp" />
-    <ClCompile Include="Demos\DiscardDemo.cpp" />
+    <ClCompile Include="Demos\Light\DiffuseDemo.cpp" />
+    <ClCompile Include="Demos\Intro\DiscardDemo.cpp" />
+    <ClCompile Include="Demos\Light\DirectionalLightDemo.cpp" />
     <ClCompile Include="Logging\ConsoleLogger.cpp" />
-    <ClCompile Include="Demos\BufferDemo.cpp" />
-    <ClCompile Include="Demos\FragCoordDemo.cpp" />
+    <ClCompile Include="Demos\Intro\BufferDemo.cpp" />
+    <ClCompile Include="Demos\Intro\FragCoordDemo.cpp" />
     <ClCompile Include="Components\DrawableComponent.cpp" />
     <ClCompile Include="GameObjects\GameObject.cpp" />
     <ClCompile Include="Logging\Logger.cpp" />
-    <ClCompile Include="Demos\MultiLightDemo.cpp" />
+    <ClCompile Include="Demos\Light\MultiLightDemo.cpp" />
     <ClCompile Include="Rendering\GLRenderer.cpp" />
     <ClCompile Include="GL\gl_core_4_5.c" />
-    <ClCompile Include="Demos\LoadingObjDemo.cpp" />
+    <ClCompile Include="Demos\Intro\LoadingObjDemo.cpp" />
     <ClCompile Include="Components\MeshComponent.cpp" />
     <ClCompile Include="OGLC\GLProgram.cpp" />
     <ClCompile Include="Input\GlfwInputHandler.cpp" />
-    <ClCompile Include="Demos\ShaderDemo.cpp" />
-    <ClCompile Include="Demos\ShaderPipelineDemo.cpp" />
-    <ClCompile Include="Demos\ShaderColorDemo.cpp" />
-    <ClCompile Include="Demos\VertexBufferDemo.cpp" />
-    <ClCompile Include="Demos\Texture2DDemo.cpp" />
+    <ClCompile Include="Demos\Intro\ShaderDemo.cpp" />
+    <ClCompile Include="Demos\Intro\ShaderPipelineDemo.cpp" />
+    <ClCompile Include="Demos\Intro\ShaderColorDemo.cpp" />
+    <ClCompile Include="Demos\Intro\VertexBufferDemo.cpp" />
+    <ClCompile Include="Demos\Texture\Texture2DDemo.cpp" />
     <ClCompile Include="Util\ServiceLocator.cpp" />
     <ClCompile Include="Components\TransformComponent.cpp" />
     <ClCompile Include="Window\GlfwWindow.cpp" />
@@ -184,33 +186,35 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Demos\CartoonShadingDemo.h" />
-    <ClInclude Include="Demos\ADSFragDemo.h" />
-    <ClInclude Include="Demos\ADSDemo.h" />
+    <ClInclude Include="Demos\Light\ADSHalfwayVecDemo.h" />
+    <ClInclude Include="Demos\Light\CartoonShadingDemo.h" />
+    <ClInclude Include="Demos\Light\ADSFragDemo.h" />
+    <ClInclude Include="Demos\Light\ADSDemo.h" />
     <ClInclude Include="Cameras\Camera.h" />
     <ClInclude Include="Components\Component.h" />
     <ClInclude Include="Data\Light.h" />
     <ClInclude Include="Data\Material.h" />
-    <ClInclude Include="Demos\DiffuseDemo.h" />
-    <ClInclude Include="Demos\DiscardDemo.h" />
+    <ClInclude Include="Demos\Light\DiffuseDemo.h" />
+    <ClInclude Include="Demos\Intro\DiscardDemo.h" />
+    <ClInclude Include="Demos\Light\DirectionalLightDemo.h" />
     <ClInclude Include="Logging\ConsoleLogger.h" />
-    <ClInclude Include="Demos\BufferDemo.h" />
-    <ClInclude Include="Demos\FragCoordDemo.h" />
+    <ClInclude Include="Demos\Intro\BufferDemo.h" />
+    <ClInclude Include="Demos\Intro\FragCoordDemo.h" />
     <ClInclude Include="Components\DrawableComponent.h" />
     <ClInclude Include="GameObjects\GameObject.h" />
     <ClInclude Include="Logging\Logger.h" />
-    <ClInclude Include="Demos\MultiLightDemo.h" />
+    <ClInclude Include="Demos\Light\MultiLightDemo.h" />
     <ClInclude Include="Rendering\GLRenderer.h" />
     <ClInclude Include="GL\gl_core_4_5.h" />
-    <ClInclude Include="Demos\LoadingObjDemo.h" />
+    <ClInclude Include="Demos\Intro\LoadingObjDemo.h" />
     <ClInclude Include="Components\MeshComponent.h" />
     <ClInclude Include="OGLC\GLProgram.h" />
     <ClInclude Include="Input\GlfwInputHandler.h" />
-    <ClInclude Include="Demos\ShaderDemo.h" />
-    <ClInclude Include="Demos\ShaderPipelineDemo.h" />
-    <ClInclude Include="Demos\ShaderColorDemo.h" />
-    <ClInclude Include="Demos\VertexBufferDemo.h" />
-    <ClInclude Include="Demos\Texture2DDemo.h" />
+    <ClInclude Include="Demos\Intro\ShaderDemo.h" />
+    <ClInclude Include="Demos\Intro\ShaderPipelineDemo.h" />
+    <ClInclude Include="Demos\Intro\ShaderColorDemo.h" />
+    <ClInclude Include="Demos\Intro\VertexBufferDemo.h" />
+    <ClInclude Include="Demos\Texture\Texture2DDemo.h" />
     <ClInclude Include="Util\GLDebug.h" />
     <ClInclude Include="Util\ServiceLocator.h" />
     <ClInclude Include="Components\TransformComponent.h" />
@@ -229,8 +233,10 @@
     <None Include="Assets\Shaders\Fragment\adsFrag.frag" />
     <None Include="Assets\Shaders\Fragment\buffer.frag" />
     <None Include="Assets\Shaders\Fragment\diffuseLight.frag" />
+    <None Include="Assets\Shaders\Fragment\directionalLight.frag" />
     <None Include="Assets\Shaders\Fragment\discard.frag" />
     <None Include="Assets\Shaders\Fragment\fragCoord.frag" />
+    <None Include="Assets\Shaders\Fragment\halfwayVector.frag" />
     <None Include="Assets\Shaders\Fragment\multiLight.frag" />
     <None Include="Assets\Shaders\Fragment\pipeline.frag" />
     <None Include="Assets\Shaders\Fragment\shaderColor.frag" />
@@ -244,8 +250,10 @@
     <None Include="Assets\Shaders\Vertex\adsFrag.vert" />
     <None Include="Assets\Shaders\Vertex\buffer.vert" />
     <None Include="Assets\Shaders\Vertex\diffuseLight.vert" />
+    <None Include="Assets\Shaders\Vertex\directionalLight.vert" />
     <None Include="Assets\Shaders\Vertex\discard.vert" />
     <None Include="Assets\Shaders\Vertex\fragCoord.vert" />
+    <None Include="Assets\Shaders\Vertex\halfwayVector.vert" />
     <None Include="Assets\Shaders\Vertex\multiLight.vert" />
     <None Include="Assets\Shaders\Vertex\pipeline.vert" />
     <None Include="Assets\Shaders\Vertex\shaderColor.vert" />
