--- a/GraphicsProgrammingSolution/00-GlfwWindow/00-GlfwWindow.vcxproj
+++ b/GraphicsProgrammingSolution/00-GlfwWindow/00-GlfwWindow.vcxproj
@@ -169,7 +169,7 @@
     <ClCompile Include="Logging\Logger.cpp" />
     <ClCompile Include="Demos\Light\MultiLightDemo.cpp" />
     <ClCompile Include="Demos\Texture\MultiTextureDemo.cpp" />
-    <ClCompile Include="Renderable.cpp" />
+    <ClCompile Include="Rendering\Renderable.cpp" />
     <ClCompile Include="Rendering\GLRenderer.cpp" />
     <ClCompile Include="GL\gl_core_4_5.c" />
     <ClCompile Include="Demos\Intro\LoadingObjDemo.cpp" />
@@ -210,7 +210,7 @@
     <ClInclude Include="Logging\Logger.h" />
     <ClInclude Include="Demos\Light\MultiLightDemo.h" />
     <ClInclude Include="Demos\Texture\MultiTextureDemo.h" />
-    <ClInclude Include="Renderable.h" />
+    <ClInclude Include="Rendering\Renderable.h" />
     <ClInclude Include="Rendering\GLRenderer.h" />
     <ClInclude Include="GL\gl_core_4_5.h" />
     <ClInclude Include="Demos\Intro\LoadingObjDemo.h" />
@@ -248,6 +248,7 @@
     <None Include="Assets\Shaders\Fragment\fragCoord.frag" />
     <None Include="Assets\Shaders\Fragment\halfwayVector.frag" />
     <None Include="Assets\Shaders\Fragment\multiLight.frag" />
+    <None Include="Assets\Shaders\Fragment\multiTexture.frag" />
     <None Include="Assets\Shaders\Fragment\pipeline.frag" />
     <None Include="Assets\Shaders\Fragment\shaderColor.frag" />
     <None Include="Assets\Shaders\Fragment\spotlight.frag" />
@@ -268,6 +269,7 @@
     <None Include="Assets\Shaders\Vertex\fragCoord.vert" />
     <None Include="Assets\Shaders\Vertex\halfwayVector.vert" />
     <None Include="Assets\Shaders\Vertex\multiLight.vert" />
+    <None Include="Assets\Shaders\Vertex\multiTexture.vert" />
     <None Include="Assets\Shaders\Vertex\pipeline.vert" />
     <None Include="Assets\Shaders\Vertex\shaderColor.vert" />
     <None Include="Assets\Shaders\Vertex\spotlight.vert" />
@@ -277,8 +279,15 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\..\Desktop\images.jpg" />
+    <Image Include="..\..\..\..\..\Downloads\random\add-sugar.png" />
+    <Image Include="..\..\..\..\..\Downloads\random\amazing.png" />
+    <Image Include="..\..\..\..\..\Downloads\random\cupid.png" />
+    <Image Include="..\..\..\..\..\Downloads\random\super.png" />
+    <Image Include="Assets\Textures\add-sugar.png" />
+    <Image Include="Assets\Textures\amazing.png" />
     <Image Include="Assets\Textures\brick.jpg" />
-    <Image Include="Assets\Textures\moss.png" />
+    <Image Include="Assets\Textures\cupid.png" />
+    <Image Include="Assets\Textures\super.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
